--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -23,8 +23,7 @@
       "defaultConfiguration": "development",
       "options": {
         "buildTarget": "web:build",
-        "dev": true,
-        "postcssConfig": "apps/web/postcss.config.js"
+        "dev": true
       },
       "configurations": {
         "development": {
