--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tanstack/react-query": "^4.0.0",
     "@trpc/client": "^10.43.0",
+    "@trpc/next": "^10.43.6",
+    "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.0",
     "next": "13.4.1",
     "react": "18.2.0",
