--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -12,17 +12,11 @@
   "dependencies": {
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/passport": "^10.0.2",
     "@nestjs/typeorm": "^10.0.1",
     "@trpc/server": "^10.43.0",
-    "iron-session": "^8.0.0",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "typeorm": "^0.3.17",
     "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@types/passport-jwt": "^3.0.13"
   }
 }
