--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,14 +10,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@tanstack/react-query": "^4.0.0",
     "@trpc/client": "^10.43.0",
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.0",
     "next": "13.4.1",
+    "next-client-cookies": "^1.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "react-hook-form": "^7.48.2",
+    "typescript": "5.1.6",
+    "zod": "^3.22.4",
+    "zustand": "^4.4.6"
   }
 }
