--- a/packages/shared/ui/project.json
+++ b/packages/shared/ui/project.json
@@ -24,7 +24,8 @@
       "executor": "@nx/storybook:storybook",
       "options": {
         "port": 4400,
-        "configDir": "packages/shared/ui/.storybook"
+        "configDir": "packages/shared/ui/.storybook",
+        "noOpen": false
       },
       "configurations": {
         "ci": {
