--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,11 +16,14 @@
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.0",
+    "dayjs": "^1.11.10",
     "next": "13.4.1",
     "next-client-cookies": "^1.1.0",
     "react": "18.2.0",
+    "react-data-grid": "7.0.0-beta.41",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-tailwindcss-datepicker": "^1.6.6",
     "typescript": "5.1.6",
     "zod": "^3.22.4",
     "zustand": "^4.4.6"
