--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,12 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@mdi/js": "^7.3.67",
+    "@mdi/react": "^1.6.1",
     "@tanstack/react-query": "^4.0.0",
     "@trpc/client": "^10.43.0",
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.0",
     "dayjs": "^1.11.10",
+    "flowbite": "^2.2.0",
+    "flowbite-react": "^0.7.0",
     "next": "13.4.1",
     "next-client-cookies": "^1.1.0",
     "react": "18.2.0",
@@ -25,6 +29,7 @@
     "react-hook-form": "^7.48.2",
     "react-tailwindcss-datepicker": "^1.6.6",
     "typescript": "5.1.6",
+    "usehooks-ts": "^2.9.1",
     "zod": "^3.22.4",
     "zustand": "^4.4.6"
   }
