--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start:web": "nx run web:serve:developement",
     "start:server": "nx run server:serve:developement",
-    "start:all": "nx run-many -t serve -p server web"
+    "start:all": "nx run-many -t serve -p server web",
+    "prepare": "husky install"
   },
   "private": true,
   "devDependencies": {
@@ -59,6 +60,7 @@
     "eslint-plugin-playwright": "^0.15.3",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "husky": "^8.0.3",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
